Fixed layout breakage caused by refactoring like/dislike components

--- a/src/Components/Main/Posts/Post.module.css
+++ b/src/Components/Main/Posts/Post.module.css
@@ -148,94 +148,19 @@
             display: flex;
             align-items: center;
             justify-content: space-between;
-            
-            .postReactionButtons {
-                width: 45%;
-                height: auto;
-                display: flex;
-                align-items: center;
-                justify-content: space-around;
-            }
-            .area {
-                width: 40px;
+            .commentArea {
+                width: auto;
                 height: 40px;
                 display: flex;
                 align-items: center;
                 justify-content: space-evenly;
+                font-size: 20px;
                 cursor: pointer;
                 margin-bottom: 20px;
-                .reaction {
-                    font-size: 20px;
-                }
-                .count {
-                    font-size: 15px;
-                    font-family: 'poppins-light';
-                }
+                gap: 5px;
             }
-            .area:hover {
-                .reaction {
-                    color: var(--DarkGray);
-                }
-                .count {
-                    color: var(--DarkGray);
-                }
-            }
-            .likearea {
-                width: 40px;
-                height: 40px;
-                border-radius: 50%;
-                background-color: var(--Gray);
-                display: flex;
-                align-items: center;
-                justify-content: space-evenly;
-                cursor: pointer;
-                margin-bottom: 20px;
-                .reaction {
-                    font-size: 20px;
-                    color: var(--MainBlue);
-                }
-                .count {
-                    font-size: 15px;
-                    font-family: 'poppins-light';
-                    color: var(--MainBlue);
-                }
-            }
-            .likearea:hover {
-                .reaction {
-                    color: var(--MainRed)
-                }
-                .count {
-                    color: var(--MainRed)
-                }
-            }
-
-            .dislikearea {
-                width: 40px;
-                height: 40px;
-                border-radius: 50%;
-                background-color: var(--Gray);
-                display: flex;
-                align-items: center;
-                justify-content: space-evenly;
-                cursor: pointer;
-                margin-bottom: 20px;
-                .reaction {
-                    font-size: 20px;
-                    color: var(--MainRed);
-                }
-                .count {
-                    font-size: 15px;
-                    font-family: 'poppins-light';
-                    color: var(--MainRed);
-                }
-            }
-            .dislikearea:hover {
-                .reaction {
-                    color: var(--MainBlue)
-                }
-                .count {
-                    color: var(----MainBlue)
-                }
+            .commentArea:hover {
+                color: var(--DarkGray);
             }
         }
     }
